added a view individual profile

--- a/views/partials/profilecard.handlebars
+++ b/views/partials/profilecard.handlebars
@@ -26,7 +26,7 @@
                         Pack<i class="fas fa-heart ms-3"></i></button>
                 </div>
                 <div class="form-group">
-                    <button type="submit" class="btn btn-action viewprofile" id="viewdog" data-user={{user_id}}>View
+                    <button type="submit" class="btn btn-action viewprofile"  value={{id}}>View This
                         Profile<i class="fas fa-paw ms-3"></i></button>
                 </div>
 
@@ -35,3 +35,5 @@
     </div>
 </div>
 </div>
+
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
