--- a/views/partials/profilecard.handlebars
+++ b/views/partials/profilecard.handlebars
@@ -1,11 +1,7 @@
 <div class="card mb-3" style="max-width: 540px;" data-id={{id}}>
     <div class="row g-0">
         <div class="col-md-4">
-            {{#if pic}}
-            <img src="{{pic}}" class="img-fluid" alt="Puppy Profile Pic">
-            {{else}}
-            <img src="./images/icons/parkpackicon.png" alt="Park Pack icon">
-            {{/if}}
+            <img src="{{ get_dog_pic user_id pic }}" class="img-fluid" alt="Puppy Profile Pic">
         </div>
 
         <div class="col-md-8">
