creating handling for image uploads

--- a/views/doggyprofile.handlebars
+++ b/views/doggyprofile.handlebars
@@ -1,7 +1,7 @@
 {{!-- form for dog signup --}}
 <h2 class="formh2" style = "text-align: center"><i class="fas fa-dog ms-3 me-2"></i>Create Doggy Profile</h2>
  
-    <form class=" form dogProfileForm">
+    <form class=" form dogProfileForm" enctype="multipart/form-data">
         <div class="form-group">
             <label>Name:</label>
             <input class="form-control" type="text" id="dogName" />
