this is actually for mypack, styled font on default message, added button navigation to dashboard in default view

--- a/views/mypack.handlebars
+++ b/views/mypack.handlebars
@@ -7,4 +7,6 @@
 {{/each}}
 {{else}}
 <p>Check out the dashboard to find friends!</p>
+ <a href="/dashboard"><button type="submit" class="btn btn-action" id="addpack">Dashboard<i
+                            class="fas fa-paw ms-3"></i></button></a>
 {{/if}}
