added intersection observer for scrolling on dashboard & mypack

--- a/views/mypack.handlebars
+++ b/views/mypack.handlebars
@@ -1,4 +1,6 @@
 {{!-- shows your friends --}}
+
+<div class="spot"></div>
 <h2 class="formh2 mb-4"><i class="fas fa-dog me-3"></i>My Pack</h2>
 
 {{#if userData}}
