--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <header>
+  <header class="header">
     <!-- start offcanvas navbar-->
     <div class="jumbotron">
       <button class="btn btn-action btn-bone" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling"
