seed update for my doggie chicky

--- a/views/ownerprofile.handlebars
+++ b/views/ownerprofile.handlebars
@@ -6,21 +6,21 @@
         <div class="row">
             <div class="form-group col-sm">
                 <label>First Name:</label>
-                <input class="form-control cl" type="text" id="firstName" />
+                <input class="form-control cl" type="text" id="firstName" required/>
             </div>
             <div class="form-group col-sm">
                 <label>Last Name:</label>
-                <input class="form-control" type="text" id="lastName" />
+                <input class="form-control" type="text" id="lastName" required />
             </div>
         </div>
         <div class="row">
             <div class="form-group col-sm">
                 <label>Email:</label>
-                <input class="form-control" type="email" id="email" />
+                <input class="form-control" type="email" id="email" required />
             </div>
             <div class="form-group col-sm">
                 <label>Zip Code:</label>
-                <input class="form-control" type="number" id="zip" />
+                <input class="form-control" type="number" id="zip" required />
             </div>
         </div>
 
@@ -28,7 +28,7 @@
             <div class="form-group col-sm">
                 <label>Gender Identity:</label>
                 </br>
-                <input type="radio" name="gender" value="Male">
+                <input type="radio" name="gender" value="Male" required>
                 <label for="male">Male</label><br>
                 <input type="radio" name="gender" value="Female">
                 <label for="fem">Female</label><br>
