cleaned up input and labels for activites selection form

--- a/views/doggyprofile.handlebars
+++ b/views/doggyprofile.handlebars
@@ -54,24 +54,24 @@
         </br>
         <p id = 'mainAct'>Activities:</p>
        <div class="activities form-group" id="activitiesbox">
-            <input class="form-input" type="checkbox" id="hiking" value="hike">
-            <label for="male">Hiking</label>
-            <input class="form-input" type="checkbox" id="walk" value="walk">
+            <input class="form-input" type="checkbox" name="hike" id="hike" value="hike">
+            <label for="hike">Hiking</label>
+            <input class="form-input" type="checkbox" name="walk" id="walk" value="walk">
             <label for="walk">Leisurely Walks</label>
-            <input class="form-input" type="checkbox" id="frisbee" value="frisbee">
-            <label for="walk">Frisbee</label>
+            <input class="form-input" type="checkbox" name="frisbee" id="frisbee" value="frisbee">
+            <label for="frisbee">Frisbee</label>
             </br>
-            <input class="form-input" type="checkbox" id="toy" value="toy">
-            <label for="walk">Squeaky Toys</label>
-            <input class="form-input" type="checkbox" id="fetch" value="fetch">
-            <label for="walk">Fetch</label>
-               <input class="form-input" type="checkbox" id="fetch" value="bigdog">
-            <label for="walk">Child friendly</label>
+            <input class="form-input" type="checkbox" name="toy" id="toy" value="toy">
+            <label for="toy">Squeaky Toys</label>
+            <input class="form-input" type="checkbox" name="fetch" id="fetch" value="fetch">
+            <label for="fetch">Fetch</label>
+            <input class="form-input" type="checkbox" name="kids" id="kids" value="kids">
+            <label for="kids">Child friendly</label>
             </br>
-            <input class="form-input" type="checkbox" id="small" value="smalldogfriendly">
-            <label for="walk">Small-dog friendly</label>
-            <input class="form-input" type="checkbox" id="fetch" value="bigdog">
-            <label for="walk">Big-dog friendly</label>
+            <input class="form-input" type="checkbox" name="smalldog" id="smalldog" value="smalldog">
+            <label for="smalldog">Small-dog friendly</label>
+            <input class="form-input" type="checkbox" name="bigdog" id="bigdog" value="bigdog">
+            <label for="bigdog">Big-dog friendly</label>
          
                
         </div>
