redirected html scripts to dist folder

--- a/views/chatroom.handlebars
+++ b/views/chatroom.handlebars
@@ -22,6 +22,6 @@
 </div>
 
 <script type="text/javascript" src="/socket.io/socket.io.js"></script>
-<script src="/js/chatroom.js"></script>
+<script src="/dist/js/chatroom.js"></script>
 {{!-- <script type="text/javascript" src="http://localhost:3001/socket.io/socket.io.js"></script> --}}
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
