--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -62,7 +62,7 @@
 
   </footer>
   {{#if logged_in}}
-  <script src="/js/logout.js"></script>
+  <script src="./dist/js/logout.js"></script>
   {{/if}}
 
   {{!-- bootstrap js plugin --}}
@@ -72,7 +72,7 @@
 
 
   
-  <script src="/js/profilecard.js"></script>
+  <script src="./dist/js/profilecard.js"></script>
 
 
 
