--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -17,5 +17,5 @@
 
 
 
-<script src="./js/login.js"></script>
+<script src="./dist/js/login.js"></script>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
