--- a/views/doggyprofile.handlebars
+++ b/views/doggyprofile.handlebars
@@ -86,6 +86,6 @@
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="./js/dogSignup.js"></script>
+<script src="./dist/js/dogSignup.js"></script>
  <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 
