--- a/views/ownerprofile.handlebars
+++ b/views/ownerprofile.handlebars
@@ -103,5 +103,5 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 {{!-- JS --}}
-<script src="./js/userSignup.js"></script>
+<script src="./dist/js/userSignup.js"></script>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@10"></script>
